Fix spacing on mobile

--- a/src/assets/css/layout/_destination.scss
+++ b/src/assets/css/layout/_destination.scss
@@ -103,6 +103,10 @@ th {
     margin: 0 0 10px 0;
   }
 
+  .destination-grid__container-item-1 img {
+    padding: 0 25px 0 25px;
+  }
+
   .destination__mobile-stats-item-2 {
     margin: 0 0 30px 0;
   }
